fix visible mobail menu

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -286,3 +286,13 @@ a {
 .ant-picker-calendar-date-content {
   height: 22px !important;
 }
+
+
+
+.ant-menu-horizontal .ant-menu-item{
+padding-inline: 12px !important;
+}
+
+.ant-menu-horizontal .ant-menu-submenu{
+  padding-inline: 12px !important;
+}
